<resources>
    <string name="app_name" translatable="false">FirstApplicationCST2355</string>
    <string name="hello_world">Hello, World!</string>
    <string name="toast_message">Label has been updated!</string>
    <string name="switch_text">Switch on/off</string>
    <string name="firstText">I Love Android</string>
    <string name="buttonPressMe">Press Me</string>
    <string name="checkBox">Check this out!</string>
    <string name="imageButton" translatable="false">Flag</string>
    <string name="welcome_message">Welcome!</string>
    <string name="hint_enter_text">Type Here</string>
    <string name="buttonAddTask">Add</string>
    <string name="switch_urgent">urgent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>