<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/firstText"
        android:layout_weight="1"
        android:gravity="fill"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="@string/imageButton"
        android:layout_weight="1"
        android:gravity="fill"/>


    <Button
        android:id="@+id/buttonPressMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPressMe"
        android:onClick="onPress"
        android:layout_weight="1"
        android:gravity="fill"/>


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        android:minHeight="60dp"
        android:layout_weight="1"
        android:gravity="fill"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:layout_weight="1"
        android:gravity="fill"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:inputType="text"
        android:minHeight="60dp"
        android:layout_height="wrap_content"
        android:hint="I Love Android"
        android:layout_columnSpan="2"
        android:gravity="fill"/>

</GridLayout>