<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/switchElement"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageButton"
        android:src="@drawable/flag"
        app:layout_constraintStart_toEndOf="@+id/firstText"
        app:layout_constraintTop_toTopOf="@+id/firstText" />

    <Button
        android:id="@+id/buttonPressMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPressMe"
        app:layout_constraintBottom_toTopOf="@+id/switchElement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstText" />

    <Switch
        android:id="@+id/switchElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/switch_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPressMe" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/checkBox"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPressMe" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I Love Android"
        android:minHeight="60dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="203dp" />

</androidx.constraintlayout.widget.ConstraintLayout>