<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:height="60dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Row one with text and image button for flags-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/firstText"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="flag"
        tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Row two with switch-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        android:height="50dp"/>

    </LinearLayout>

    <!-- Row three with button and checkbox-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPressMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPressMe"
            android:onClick="onClick"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox" />
    </LinearLayout>

    <!-- Row four with edit text hint-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="I Love Android"
            android:autofillHints="hint"
            android:height="80dp"
            android:minHeight="60dp"/>
    </LinearLayout>
</LinearLayout>






